Fix layout jumping due to bottom border

--- a/src/layouts/Base.css
+++ b/src/layouts/Base.css
@@ -25,6 +25,7 @@
     font-weight: 500;
     text-decoration: none;
     padding: 8px;
+    border-bottom: 2px solid transparent;
 
     @media (--lg) {
       padding-left: 16px;
